k8s/local/foo/deployment.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
    - name: foo-app
      command:
        - /agnhost
        - serve-hostname
        - --http=true
        - --port=8080
      image: registry.k8s.io/e2e-test-images/agnhost:2.39
      ports:
        - containerPort: 8080
      resources:
        limits:
          cpu: 300m
          memory: 300Mi
        requests:
          cpu: 100m
          memory: 100Mi
