k8s/local/foo/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
